--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  i18n_extension: ^1.3.5
   flutter_platform_widgets: ^0.32.5
   device_preview: ^0.4.4
   google_fonts: ^1.0.0
