--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,3 +7,4 @@ linter:
       avoid_classes_with_only_static_members: false
       lines_longer_than_80_chars: false
       avoid_relative_lib_imports: false
+      type_annotate_public_apis: false
