--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  intl: ^0.16.1
+  dio_interceptors: ^0.0.4+1
+  dio_http_cache: ^0.2.6
+  mobx_widget: ^0.4.0
+  responsive_framework: ^0.0.5
   i18n_extension: ^1.3.5
   flutter_platform_widgets: ^0.32.5
   device_preview: ^0.4.4
