--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,46 +8,33 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  catcher: ^0.3.6
+  animations: ^1.0.0+5
+  device_info: ^0.4.2+3
+  intl: ^0.16.1
+  dio_interceptors: ^0.0.4+1
+  dio_http_cache: ^0.2.6
+  mobx_widget: ^0.4.0
+  responsive_framework: ^0.0.5
+  i18n_extension: ^1.3.5
+  flutter_platform_widgets: ^0.32.5
+  device_preview: ^0.4.4
+  google_fonts: ^1.0.0
+  dio: ^3.0.9
+  flutter_mobx: ^1.1.0
+  mobx: ^1.1.1
+  flutter_modular: ^1.1.2
+  flutter_localizations:
+    sdk: flutter
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  mockito: ^4.1.1
+  mobx_codegen: ^1.0.3
+  build_runner: ^1.8.1
+  effective_dart: ^1.2.1
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
