--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  mockito: ^4.1.1
+  mobx_codegen: ^1.0.3
+  build_runner: ^1.8.1
+  effective_dart: ^1.2.1
   flutter_test:
     sdk: flutter
 
